# pc-agent

./: README.md  pyproject.toml  requirements.txt
aipc_agent/: .env.example  app.py  app.spec.example  main.py  main.spec.example  requirements.txt  sqlite.db  start_server.py  start_server.sh  start_server.spec.example
aipc_agent/agent/: custom_agent.py
aipc_agent/api/v1/: api.py
aipc_agent/config/: config.json
aipc_agent/core/: config.py  default_engine.py  llm.py  models.py  trt_llm_engine.py
aipc_agent/models/: baichuan2_7b_chat.py  model_management.py
aipc_agent/schemas/: openai_chunk_schema.py  openai_completion_params.py  openai_schema.py
aipc_agent/schemas/chat_completion/: chat_completion_content_part_text_param.py  chat_completion_named_tool_choice_param.py
aipc_agent/tools/: custom_tools.py
aipc_agent/utils/: compat.py  constants.py  data_process.py  loader.py  patcher.py  protocol.py  request.py  sqlite_utils.py  streamer.py  template.py  trt_utils.py
aipc_agent/utils/generations/: __init__.py  baichuan.py  stream.py
aipc_agent/utils/glm3_6b/: generation.py  utils.py
aipc_agent/utils/rag/: __init__.py
cpp/: CMakeLists.txt  install.cpp
script/: finetune-baichuan2.py  win_service.bat  win_service.py  win_service.spec.example
web/: .gitignore  package.json  prettier.config.cjs  tsconfig.json
web/custom_typings/can-ndjson-stream/: index.d.ts
web/src/: env.mjs  middleware.ts
web/src/api-client/: index.ts
web/src/hooks/: index.ts  useCustomState.ts  useDeepCompareEffect.ts
web/src/pages/: _app.tsx  index.tsx
(+129 files in other folders)
